fixing color contrast issue for shortcut label (#344)
* fixing color contrast issue for shortcut label

* updating secondary text color

--- a/src/popup/Styles/popup.scss
+++ b/src/popup/Styles/popup.scss
@@ -176,6 +176,7 @@ html {
 }
 
 #popup-container .main-section .shortcut-label {
+    color: $secondary-text;
     text-align: right;
     padding-top: 3px;
     padding-bottom: 0px;
